# macroscoop

./: .gitignore  main.py  pyproject.toml
shared/: pyproject.toml
shared/shared/config/: log_config.json
shared/shared/utils/: helper.py  log_setup.py  logging.py
shared/utils/: log_config.json  logging.py
src/ingestion/: main.py  pyproject.toml
src/ingestion/app/: base.py  db_utils.py  edgar.py  yt_transcipts.py
