[project]
name = "macroscoop-ingestion"
version = "0.1.0"
description = "Ingestion service for macroscoop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "macroscoop-shared",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
macroscoop-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
