[project]
name = "macroscoop-ingestion"
version = "0.1.0"
description = "Ingestion service for macroscoop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "macroscoop-shared",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
macroscoop-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = ["app/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
